ENEX FSL/snapshotDownload (1)/objects/Contract.object
<CustomObject><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><fields><fullName>Asesor_de_Venta__c</fullName><externalId>false</externalId><formula>Account.Owner.FirstName &amp; &quot; &quot; &amp; Account.Owner.LastName</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Asesor de Venta</label><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Aviso_de_vencimiento__c</fullName><externalId>false</externalId><label>Aviso de vencimiento</label><precision>10</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>C3__c</fullName><externalId>false</externalId><label>C3</label><precision>16</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>Cesi_n_de_Contrato__c</fullName><externalId>false</externalId><label>Cesión de Contrato</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Sí</fullName><default>false</default><label>Sí</label></value><value><fullName>No</fullName><default>false</default><label>No</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Control_de_Consumo__c</fullName><externalId>false</externalId><label>Control de Consumo</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Mensual</fullName><default>false</default><label>Mensual</label></value><value><fullName>Trimestral</fullName><default>false</default><label>Trimestral</label></value><value><fullName>Semestral</fullName><default>false</default><label>Semestral</label></value><value><fullName>Anual</fullName><default>false</default><label>Anual</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Detalle_de_Equipos__c</fullName><externalId>false</externalId><label>Detalle de Equipos</label><length>32768</length><trackHistory>false</trackHistory><type>LongTextArea</type><visibleLines>3</visibleLines></fields><fields><fullName>Dias_Credito__c</fullName><externalId>false</externalId><label>Dias Credito</label><length>10</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Direcci_n_de_despacho__c</fullName><externalId>false</externalId><label>Dirección de despacho</label><length>50</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Fecha_T_rmino_Contrato__c</fullName><externalId>false</externalId><label>Fecha Término Contrato</label><required>false</required><trackHistory>false</trackHistory><type>Date</type></fields><fields><fullName>Fecha_de_Aviso_Termino_de_Contrato__c</fullName><externalId>false</externalId><formula>if((Plazo_de_aviso_d_as__c+30)&lt;91,EndDate - 90,if(Plazo_de_aviso_d_as__c=0,EndDate - 90,EndDate -Plazo_de_aviso_d_as__c - 20))</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Fecha de Aviso Termino de Contrato</label><required>false</required><trackHistory>false</trackHistory><type>Date</type></fields><fields><fullName>Firmado_por_el_Cliente_P__c</fullName><externalId>false</externalId><label>Firmado por el Cliente (p)</label><length>120</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Localidad__c</fullName><externalId>false</externalId><label>Localidad</label><length>30</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Mandato_Pagare__c</fullName><externalId>false</externalId><label>Mandato Pagare</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Sí</fullName><default>false</default><label>Sí</label></value><value><fullName>No</fullName><default>false</default><label>No</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Monto_Inversi_n_UF__c</fullName><externalId>false</externalId><label>Monto Inversión (UF)</label><precision>16</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>N_mero_de__c</fullName><externalId>false</externalId><label>Número de Renovaciones</label><precision>18</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>Plazo_de_aviso_d_as__c</fullName><externalId>false</externalId><label>Plazo de aviso (días)</label><precision>18</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>Producto__c</fullName><externalId>false</externalId><label>Producto</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>true</sorted><value><fullName>Ad-Blue</fullName><default>false</default><label>Ad-Blue</label></value><value><fullName>Asfaltos y Gas</fullName><default>false</default><label>Asfaltos y Gas</label></value><value><fullName>Gasolina</fullName><default>false</default><label>Gasolina</label></value><value><fullName>Lubricante</fullName><default>false</default><label>Lubricante</label></value><value><fullName>Petróleo Diesel</fullName><default>false</default><label>Petróleo Diesel</label></value><value><fullName>Químicos</fullName><default>false</default><label>Químicos</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Propiedad_de_los_Equipos__c</fullName><externalId>false</externalId><label>Propiedad de los Equipos</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>ENEX</fullName><default>false</default><label>ENEX</label></value><value><fullName>CLIENTE</fullName><default>false</default><label>CLIENTE</label></value><value><fullName>SIN INVERSION</fullName><default>false</default><label>SIN INVERSION</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Raz_n_Social__c</fullName><externalId>false</externalId><formula>Account.Raz_n_Social__c</formula><label>Razón Social</label><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Regi_n__c</fullName><externalId>false</externalId><label>Región</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>15 - Arica y Parinacota</fullName><default>false</default><label>15 - Arica y Parinacota</label></value><value><fullName>1 - Tarapacá</fullName><default>false</default><label>1 - Tarapacá</label></value><value><fullName>2 - Antofagasta</fullName><default>false</default><label>2 - Antofagasta</label></value><value><fullName>3 - Atacama</fullName><default>false</default><label>3 - Atacama</label></value><value><fullName>4 - Coquimbo</fullName><default>false</default><label>4 - Coquimbo</label></value><value><fullName>5 - Valparaíso</fullName><default>false</default><label>5 - Valparaíso</label></value><value><fullName>6 - O&apos;Higgins</fullName><default>false</default><label>6 - O&apos;Higgins</label></value><value><fullName>7 - Maule</fullName><default>false</default><label>7 - Maule</label></value><value><fullName>8 - Bío-Bío</fullName><default>false</default><label>8 - Bío-Bío</label></value><value><fullName>9 - Araucanía</fullName><default>false</default><label>9 - Araucanía</label></value><value><fullName>14 - Los Ríos</fullName><default>false</default><label>14 - Los Ríos</label></value><value><fullName>10 - Los Lagos</fullName><default>false</default><label>10 - Los Lagos</label></value><value><fullName>11 - Aysén</fullName><default>false</default><label>11 - Aysén</label></value><value><fullName>12 - Magallanes</fullName><default>false</default><label>12 - Magallanes</label></value><value><fullName>13 - Metropolitana</fullName><default>false</default><label>13 - Metropolitana</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Renovable__c</fullName><externalId>false</externalId><label>Renovable?</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Sí</fullName><default>false</default><label>Sí</label></value><value><fullName>No</fullName><default>false</default><label>No</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Renovaci_n_Autom_tica_meses__c</fullName><externalId>false</externalId><label>Renovación Automática (meses)</label><precision>18</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>Representante_Legal__c</fullName><externalId>false</externalId><label>Representante Legal</label><length>150</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>SLA_Cotizaciones_Aceptadas__c</fullName><externalId>false</externalId><formula>LastModifiedDate -  CreatedDate</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>SLA Cotizaciones Aceptadas</label><precision>18</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>Tipo_de_documento__c</fullName><externalId>false</externalId><label>Tipo de documento</label><length>255</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Unidad__c</fullName><externalId>false</externalId><label>Unidad</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Litros</fullName><default>false</default><label>Litros</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Venta_Real__c</fullName><externalId>false</externalId><formula>( Account.Total_Ventas_Combustible_A_o_Actual__c  +  Account.Total_Ventas_Lubricantes_A_o_Actual__c )
/MONTH(today())</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Venta Real</label><precision>18</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>Volumen_Total_Contrato_Litros__c</fullName><externalId>false</externalId><label>Volumen Total Contrato (Litros)</label><precision>18</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>Volumen__c</fullName><externalId>false</externalId><label>Volumen</label><precision>16</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>ltima_fecha_de_renovaci_n__c</fullName><externalId>false</externalId><label>Última fecha de renovación</label><required>false</required><trackHistory>false</trackHistory><type>Date</type></fields><listViews><fullName>AllActivatedContracts</fullName><filterScope>Everything</filterScope><filters><field>CONTRACT.STATUS_CODE</field><operation>equals</operation><value>A</value></filters><label>All Activated Contracts</label></listViews><listViews><fullName>AllContracts</fullName><columns>CONTRACT.CONTRACT_NUMBER</columns><columns>SALES.ACCOUNT.NAME</columns><columns>CONTRACT.STATUS</columns><columns>OWNER_EXPIRATION_NOTICE</columns><columns>CONTRACT.END_DATE</columns><columns>CUSTOMER_SIGNED_DATE</columns><columns>CONTRACT.CREATED_DATE</columns><filterScope>Everything</filterScope><label>Todos los contratos</label><language>es</language></listViews><listViews><fullName>AllDraftContracts</fullName><filterScope>Everything</filterScope><filters><field>CONTRACT.STATUS_CODE</field><operation>equals</operation><value>D</value></filters><label>All Draft Contracts</label></listViews><listViews><fullName>AllInApprovalContracts</fullName><filterScope>Everything</filterScope><filters><field>CONTRACT.STATUS_CODE</field><operation>equals</operation><value>P</value></filters><label>All In Approval Contracts</label></listViews><listViews><fullName>MyActivatedContracts</fullName><filterScope>Mine</filterScope><filters><field>CONTRACT.STATUS_CODE</field><operation>equals</operation><value>A</value></filters><label>My Activated Contracts</label></listViews><listViews><fullName>MyDraftContracts</fullName><filterScope>Mine</filterScope><filters><field>CONTRACT.STATUS_CODE</field><operation>equals</operation><value>D</value></filters><label>My Draft Contracts</label></listViews><listViews><fullName>MyInApprovalContracts</fullName><filterScope>Mine</filterScope><filters><field>CONTRACT.STATUS_CODE</field><operation>equals</operation><value>P</value></filters><label>My In Approval Contracts</label></listViews><recordTypeTrackHistory>false</recordTypeTrackHistory><recordTypes><fullName>Asfaltos</fullName><active>true</active><label>Asfaltos</label></recordTypes><recordTypes><fullName>Combustible</fullName><active>true</active><label>Combustible</label></recordTypes><recordTypes><fullName>GasGas</fullName><active>true</active><label>Gas</label></recordTypes><recordTypes><fullName>Lubricantes</fullName><active>true</active><label>Lubricantes</label></recordTypes><recordTypes><fullName>Qu_micos</fullName><active>true</active><label>Químicos</label></recordTypes><sharingModel>ReadWrite</sharingModel></CustomObject>